--- a/Honcizek/Views/Administrador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Index.cshtml
@@ -17,7 +17,7 @@
         </a>
     </p>
     <p class="float-right">
-        <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")" asp-route-id="@((bool)ViewData["general"] ? ViewData["usuario_id"]:"")">
+        <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")">
             <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
                 @((bool)ViewData["general"] ? "Ver mis proyectos":"Ver todos los proyectos")
             </button>
@@ -117,7 +117,7 @@
                         }
                     </td>
                     <td>
-                        <a asp-controller="Trabajos" asp-action="Index" asp-route-id="@item.Id">
+                        <a asp-controller="Trabajos" asp-action="IndexUsuario" asp-route-id="@item.Id">
                             <button class="btn btn-warning">
                                 Trabajos
                             </button>
