--- a/Honcizek/Views/Shared/Programador.cshtml
+++ b/Honcizek/Views/Shared/Programador.cshtml
@@ -22,15 +22,23 @@
         <aside class="d-flex flex-column">
 
             <a asp-controller="ProyectosP" asp-action="Index">
-                <div class="menu-option Proyectos">
+                <div class="menu-option ProyectosP">
                     <span>Proyectos</span>
                 </div>
             </a>
 
-            <a asp-controller="Tickets" asp-action="Index">
-                <div class="menu-option Tickets">
+            <a asp-controller="TicketsP" asp-action="Index">
+                <div class="menu-option TicketsP">
                     <span>
                         Tickets
+                    </span>
+                </div>
+            </a>
+
+            <a asp-controller="SuscripcionesP" asp-action="Index">
+                <div class="menu-option SuscripcionesP">
+                    <span>
+                        Suscripciones
                     </span>
                 </div>
             </a>
