--- a/Honcizek/Views/Administrador/Trabajos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Index.cshtml
@@ -15,10 +15,14 @@
             </a>
         </p>
         <p class="float-lg-right">
-            
             <a asp-controller="Proyectos" asp-action="Edit" asp-route-id="@ViewData["proyecto_id"]">
-                <button class="btn btn-warning">
+                <button class="btn btn-primary">
                     Volver al proyecto
+                </button>
+            </a>
+            <a asp-controller="Trabajos" asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")" asp-route-id="@ViewData["proyecto_id"]">
+                <button class="btn btn-warning">
+                    @((bool)ViewData["general"] ? "Ver mis trabajos":"Ver todos los trabajos")
                 </button>
             </a>
         </p>
