--- a/Honcizek/wwwroot/css/site.css
+++ b/Honcizek/wwwroot/css/site.css
@@ -113,7 +113,7 @@ table thead th {
 }
 
 table thead tr th:last-child {
-    width: 25%;
+    width: auto;
 }
 
 table tbody tr {
@@ -143,6 +143,7 @@ table tbody tr td:last-child {
     padding-top: 1vh;
     padding-bottom: 1vh;
     float: right;
+    width: auto;
 }
 
 table tbody tr td:last-child button{
