--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -102,7 +102,7 @@
                         @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
                     </td>
                     <td>
-                        <a asp-controller="Partes" asp-action="Index" asp-route-id="@item.Id">
+                        <a asp-controller="Partes" asp-action="IndexUsuario" asp-route-id="@item.Id">
                             <button class="btn btn-warning">
                                 Trabajos
                             </button>
