--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -27,20 +27,20 @@
                     </span>
                 </div>
             </a>
-            <a asp-controller="Proyectos" asp-action="Index">
+            <a asp-controller="Proyectos" asp-action="IndexUsuario">
                 <div class="menu-option Proyectos">
                     <span>Proyectos</span>
                 </div>
             </a>
 
-            <a asp-controller="Tickets" asp-action="Index">
+            <a asp-controller="Tickets" asp-action="IndexUsuario">
                 <div class="menu-option Tickets">
                     <span>
                         Tickets
                     </span>
                 </div>
             </a>
-           <a asp-controller="Suscripciones" asp-action="Index">
+           <a asp-controller="Suscripciones" asp-action="IndexUsuario">
                <div class="menu-option Suscripciones">
                    <span>
                        Suscripciones
