--- a/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
@@ -16,7 +16,7 @@
         </a>
     </div>
     <div class="align-self-end pr-3">
-        <a asp-controller="Trabajos" asp-action="Index" asp-route-id="@Model.Id">
+        <a asp-controller="Trabajos" asp-action="IndexUsuario" asp-route-id="@Model.Id">
             <button class="btn btn-warning">Consultar trabajos</button>
         </a>
     </div>
