--- a/Honcizek/Views/Administrador/Partes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Partes/Index.cshtml
@@ -59,46 +59,53 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FRegistro)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Hora)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Horas)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Minutos)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Agente.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Ticket.Nombre)
-                    </td>
-                    <td class="float-right">
-                        <a asp-action="Edit" asp-route-id="@item.Id">
-                            <button class="btn btn-primary">
-                                Editar
-                            </button>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
-                    </td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FRegistro)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Hora)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Horas)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Minutos)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Agente.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Ticket.Nombre)
+                        </td>
+                        <td class="float-right">
+                            <a asp-action="Edit" asp-route-id="@item.Id">
+                                <button class="btn btn-primary">
+                                    Editar
+                                </button>
+                            </a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
+    @if (!(Model.Count() > 0))
+    {
+        <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+    }
     <div class="float-right">
         <a asp-controller="Tickets" asp-action="Index">
             <button class="btn btn-secondary">
