--- a/Honcizek/Views/Administrador/Participantes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Participantes/Index.cshtml
@@ -37,26 +37,33 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Usuario.FullName)
-                    </td>
-                    <td class="float-right">
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
-                    </td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Usuario.FullName)
+                        </td>
+                        <td class="float-right">
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
+            @if (!(Model.Count() > 0))
+            {
+                <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+            }
     <div class="float-right">
         <a asp-controller="Proyectos" asp-action="Index">
             <button class="btn btn-secondary">
