--- a/Honcizek/Views/Administrador/Suscripciones/Index.cshtml
+++ b/Honcizek/Views/Administrador/Suscripciones/Index.cshtml
@@ -57,85 +57,93 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tipo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @if (item.FechaDesde != null)
-                        {
-                            @Html.DisplayFor(modelItem => item.FDesde)
-                        }
-                        else
-                        {
-                            <span>Sin especificar</span>
-                        }
-                    </td>
-                    <td>
-                        @if (item.FechaHasta != null)
-                        {
-                            @Html.DisplayFor(modelItem => item.FHasta)
-                        }
-                        else
-                        {
-                            <span>Sin especificar</span>
-                        }
-                    </td>
-                    <td>
-                        @if (item.Renovacion == 1)
-                        {
-                            <span>Activa</span>
-                        }
-                        else
-                        {
-                            <span>Inactiva</span>
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Periodicidad)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Agente.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Cliente.FullName)
-                    </td>
-                    <td>
-                        @if (item.Tipo != "Hardware" && item.ProyectoId != null)
-                        {
-                            @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
-                        }
-                        else
-                        {
-                            <span>Sin proyecto</span>
-                        }
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">
-                            <button class="btn btn-primary">
-                                Editar
-                            </button>
-                        </a>
-                        <a asp-action="Details" asp-route-id="@item.Id">
-                            <button class="btn btn-info">
-                                Detalles
-                            </button>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
-                    </td>
-                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Tipo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @if (item.FechaDesde != null)
+                            {
+                                @Html.DisplayFor(modelItem => item.FDesde)
+                            }
+                            else
+                            {
+                                <span>Sin especificar</span>
+                            }
+                        </td>
+                        <td>
+                            @if (item.FechaHasta != null)
+                            {
+                                @Html.DisplayFor(modelItem => item.FHasta)
+                            }
+                            else
+                            {
+                                <span>Sin especificar</span>
+                            }
+                        </td>
+                        <td>
+                            @if (item.Renovacion == 1)
+                            {
+                                <span>Activa</span>
+                            }
+                            else
+                            {
+                                <span>Inactiva</span>
+                            }
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Periodicidad)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Agente.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Cliente.FullName)
+                        </td>
+                        <td>
+                            @if (item.Tipo != "Hardware" && item.ProyectoId != null)
+                            {
+                                @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
+                            }
+                            else
+                            {
+                                <span>Sin proyecto</span>
+                            }
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.Id">
+                                <button class="btn btn-primary">
+                                    Editar
+                                </button>
+                            </a>
+                            <a asp-action="Details" asp-route-id="@item.Id">
+                                <button class="btn btn-info">
+                                    Detalles
+                                </button>
+                            </a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
+    @if (!(Model.Count() > 0))
+    {
+        <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+    }
 }
 @if ((bool)ViewData["error"])
 {
