--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -5,23 +5,23 @@
 }
 
 <h1>Listado de @(!(bool)ViewData["general"]?"mis":"") tickets</h1>
-@if (!(bool)ViewData["error"] && !(bool)ViewData["forbidden"])
+@if (!(bool)ViewData["error"])
 {
     <div>
-    <p class="float-left">
-        <a asp-action="Create">
-            <button class="btn btn-info">
-                Crear nuevo
-            </button>
-        </a>
-    </p>
-    <p class="float-right">
-        <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")">
-            <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
-                @((bool)ViewData["general"] ? "Ver mis tickets":"Ver todos los tickets")
-            </button>
-        </a>
-    </p>
+        <p class="float-left">
+            <a asp-action="Create">
+                <button class="btn btn-info">
+                    Crear nuevo
+                </button>
+            </a>
+        </p>
+        <p class="float-right">
+            <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")">
+                <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
+                    @((bool)ViewData["general"] ? "Ver mis tickets":"Ver todos los tickets")
+                </button>
+            </a>
+        </p>
     </div>
     <table class="table">
         <thead>
@@ -57,88 +57,95 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Estado)
-                    </td>
-                    <td>
-                        @if (item.FechaRegistro != null)
-                        {
-                            @Html.DisplayFor(modelItem => item.FRegistro)
-                        }
-                        else
-                        {
-                            <span>Sin especificar</span>
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.HoraRegistro)
-                    </td>
-                    <td>
-                        @if (item.FechaFinalizacion != null)
-                        {
-                            @Html.DisplayFor(modelItem => item.FFin)
-                        }
-                        else
-                        {
-                            <span>Sin especificar</span>
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.HoraFinalizacion)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Agente.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Cliente.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
-                    </td>
-                    <td>
-                        <a asp-controller="Partes" asp-action="IndexUsuario" asp-route-id="@item.Id">
-                            <button class="btn btn-warning">
-                                Trabajos
-                            </button>
-                        </a>
-                        <a asp-action="Edit" asp-route-id="@item.Id">
-                            <button class="btn btn-primary">
-                                Editar
-                            </button>
-                        </a>
-                        <a asp-action="Details" asp-route-id="@item.Id">
-                            <button class="btn btn-info">
-                                Detalles
-                            </button>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
-                    </td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Estado)
+                        </td>
+                        <td>
+                            @if (item.FechaRegistro != null)
+                            {
+                                @Html.DisplayFor(modelItem => item.FRegistro)
+                            }
+                            else
+                            {
+                                <span>Sin especificar</span>
+                            }
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HoraRegistro)
+                        </td>
+                        <td>
+                            @if (item.FechaFinalizacion != null)
+                            {
+                                @Html.DisplayFor(modelItem => item.FFin)
+                            }
+                            else
+                            {
+                                <span>Sin especificar</span>
+                            }
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HoraFinalizacion)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Agente.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Cliente.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
+                        </td>
+                        <td>
+                            <a asp-controller="Partes" asp-action="IndexUsuario" asp-route-id="@item.Id">
+                                <button class="btn btn-warning">
+                                    Trabajos
+                                </button>
+                            </a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">
+                                <button class="btn btn-primary">
+                                    Editar
+                                </button>
+                            </a>
+                            <a asp-action="Details" asp-route-id="@item.Id">
+                                <button class="btn btn-info">
+                                    Detalles
+                                </button>
+                            </a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
+    @if (!(Model.Count() > 0))
+    {
+        <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+    }
 }
+
 @if ((bool)ViewData["error"])
 {
-    <h4>Est&aacute;s intentando ver los tickets de un usuario que no existe.</h4>
+    <div class="row col-12">
+        <h4 class="">
+            Parece que ha habido un error con tu usuario, puedes intentar cerrar sesi&oacute;n y volver a entrar.
+        </h4>
+        <form class="pl-3" asp-controller="Login" asp-action="Logout" method="post">
+            <button class="btn btn-danger">Cerrar sesi&oacute;n</button>
+        </form>
+    </div>
     <hr />
-    <h5>Prueba a ver el <a class="honci-link" asp-controller="Tickets" asp-action="Index">Listado completo de tickets</a> e int&eacute;ntalo de nuevo</h5>
-    <hr />
-    <h5>Tambi&eacute;n puedes probar a ver <a class="honci-link" asp-controller="Tickets" asp-action="IndexUsuario" asp-route-id="@ViewData["usuario_id"]">Listado de tus tickets</a> e int&eacute;ntalo de nuevo</h5>
-}
-@if ((bool)ViewData["forbidden"])
-{
-    <h4>Est&aacute;s intentando ver los tickets de otro programador...</h4>
-    <hr />
-    <h5>Prueba a ver el <a class="honci-link" asp-controller="Tickets" asp-action="Index">Listado completo de tickets</a> e int&eacute;ntalo de nuevo</h5>
+    <h5>O puedes ver el <a class="honci-link" asp-controller="Tickets" asp-action="Index">Listado completo de tickets</a>.</h5>
 }
