--- a/Honcizek/Views/Administrador/Trabajos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Listado de @((bool)ViewData["general"] ? "":"mis") Trabajos</h1>
+<h1>Listado de @((bool)ViewData["general"] ? "":"mis") trabajos</h1>
 @if (!(bool)ViewData["error"])
 {
     <div>
@@ -44,39 +44,46 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model.Count() > 0)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Agente.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
-                    </td>
-                    <td class="float-right">
-                        <a asp-action="Edit" asp-route-id="@item.Id">
-                            <button class="btn btn-primary">
-                                Editar
-                            </button>
-                        </a>
-                        <a asp-action="Details" asp-route-id="@item.Id">
-                            <button class="btn btn-info">
-                                Detalles
-                            </button>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
-                    </td>
-                </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Agente.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
+                        </td>
+                        <td class="float-right">
+                            <a asp-action="Edit" asp-route-id="@item.Id">
+                                <button class="btn btn-primary">
+                                    Editar
+                                </button>
+                            </a>
+                            <a asp-action="Details" asp-route-id="@item.Id">
+                                <button class="btn btn-info">
+                                    Detalles
+                                </button>
+                            </a>
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
+    @if (!(Model.Count() > 0))
+    {
+        <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+    }
     <div class="float-right">
         <a asp-controller="Proyectos" asp-action="Index">
             <button class="btn btn-secondary">
