--- a/Honcizek/Views/Programador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Programador/Proyectos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Listado de mis Proyectos</h1>
+<h1>Listado de mis proyectos</h1>
 @if (!(bool)ViewData["error"])
 {
     <p></p>
