--- a/Honcizek/Views/Programador/Trabajos/Create.cshtml
+++ b/Honcizek/Views/Programador/Trabajos/Create.cshtml
@@ -4,43 +4,44 @@
     ViewData["Title"] = "Crear";
 }
 
-<h1>Crear</h1>
+<h1>Crear trabajo</h1>
 
-<h4>Trabajos</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProyectoId" class="control-label"></label>
-                <select asp-for="ProyectoId" class ="form-control" asp-items="ViewBag.ProyectoId"></select>
+@if (!(bool)ViewData["error"])
+{
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ProyectoId" value="@ViewData["proyecto_id"]" />
+                <input type="hidden" asp-for="AgenteId" value="@ViewData["usuario_id"]" />
+                <div class="form-group">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Descripcion" class="control-label"></label>
+                    <textarea asp-for="Descripcion" class="form-control"></textarea>
+                    <span asp-validation-for="Descripcion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Crear" class="btn btn-info" />
+                </div>
+            </form>
+            <div class="pt-3 ">
+                <a asp-action="IndexUsuario" asp-route-id="@ViewData["proyecto_id"]">
+                    <button class="btn btn-primary">Volver al listado</button>
+                </a>
             </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AgenteId" class="control-label"></label>
-                <select asp-for="AgenteId" class ="form-control" asp-items="ViewBag.AgenteId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            <div class="form-group pl-3">
-                <input type="submit" value="Crear" class="btn btn-info" />
-            </div>
-        </form>
-        <div class="pt-3 pl-3">
-            <a asp-action="Index">
-                <button class="btn btn-primary">Volver al listado</button>
-            </a>
         </div>
     </div>
-</div>
+}
+else
+{
+    <h4>Est&aacute;s intentando crear un trabajo para un proyecto que no existe.</h4>
+    <span>Prueba a volver al <a class="honci-link" asp-controller="Proyectos" asp-action="Index">Listado de proyectos</a> e int&eacute;ntalo de nuevo</span>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
