--- a/Honcizek/Views/Programador/Trabajos/Edit.cshtml
+++ b/Honcizek/Views/Programador/Trabajos/Edit.cshtml
@@ -1,44 +1,49 @@
 @model Honcizek.DAL.Models.Trabajos
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
+    var Readonly = (bool)ViewData["readonly"];
 }
 
-<h1>Editar</h1>
+<h1>@(Readonly ? "Ver":"Editar")</h1>
 
-<h4>Trabajos</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 @(Readonly ? "readonly":"")">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ProyectoId" class="control-label"></label>
-                <select asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
-                <span asp-validation-for="ProyectoId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="ProyectoId" />
+            @if (Readonly)
+            {
+                <div class="form-group">
+                    <label asp-for="AgenteId" class="control-label">Programador</label>
+                    <select disabled="@Readonly" data-live-search="true" asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
+                </div>
+            }
+            else
+            {
+                <input type="hidden" asp-for="AgenteId" value="@ViewData["usuario_id"]" />
+            }
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input disabled="@Readonly" asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AgenteId" class="control-label"></label>
-                <select asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
-                <span asp-validation-for="AgenteId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
+                <textarea disabled="@Readonly" asp-for="Descripcion" class="form-control"></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-             <div class="form-group pl-3">
-                <input type="submit" value="Guardar" class="btn btn-info" />
-            </div>
+            @if (!Readonly)
+            {
+                <div class="form-group">
+                    <input type="submit" value="Guardar" class="btn btn-info" />
+                </div>
+            }
         </form>
-        <div class="pt-3 pl-3">
-            <a asp-action="Index">
+        <div class="pt-3 ">
+            <a asp-action="@(Readonly ? "Index":"IndexUsuario")" asp-route-id="@Model.ProyectoId">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
         </div>
